--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Plan your questions ahead of time.</h3>
+              <p>Its way easier to come up with questions at home with a pen and pad then it is mid interview. Don't interview someoen unless you have an idea where you want the conversation to go.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Find an Interviewee</h3>
+              <p>When interviewing a random person you must first find a random person. Luckily for you they are everywhere. The best places to go are parks. coffee shops, places of food, or libraries. Remember that you are going to need to start a conversation with somebody here so find a place where its normal to talk to strangers. </p>
 
               <!--
 This block contains a photo and has a caption.
@@ -138,8 +138,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Strike up a conversation with someone.</h3>
+              <p>Now its time to put all your preperation to work. Find someone who you think looks interesting and is not busy with something. Go up to them and begin talking to them like normal. Lead the converstaion to asking them if you can interview them for a school project. Remember to stay respectful.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -150,16 +150,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Start the Interview</h3>
+              <p>If they say yes to an interview then its time to begin. Ask the person to introduce themselves. After that keep the conversation going like normal. You dont want an interview to feel like an interview, keep it natural. Lead the conversation towards topics that you want to discuss and ask your questions when they naturally come up in conversation.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Ending the Interview</h3>
+              <p>Once you feel the converstaion is coming to an end and you have asked all of your questions then it is time to end the interview. Thank the person for their time and ask if you can have a photo for your interview.</p> 
             </div>
           </li>
 
