--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ Add your Things You'll Need.
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
               <li>Paper</li>
-              <li>Pen/Pencil</li>
-              <li>A place people congrigate</li>
+              <li>Pen/pencil</li>
+              <li>A place people congregate</li>
               <li>Camera (phone camera works best)</li>
             </ul>
           </aside>
@@ -131,7 +131,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">A professional interviewer</p>
             </div>
           </li>
 
