--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Plan your questions ahead of time.</h3>
-              <p>Its way easier to come up with questions at home with a pen and pad then it is mid interview. Don't interview someoen unless you have an idea where you want the conversation to go.</p> 
+              <p>Its way easier to come up with questions at home with a pen and pad then it is mid-interview. Don't interview someone unless you have an idea where you want the conversation to go.</p> 
             </div>
           </li>
 
@@ -123,7 +123,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Find an Interviewee</h3>
-              <p>When interviewing a random person you must first find a random person. Luckily for you they are everywhere. The best places to go are parks. coffee shops, places of food, or libraries. Remember that you are going to need to start a conversation with somebody here so find a place where its normal to talk to strangers. </p>
+              <p>When interviewing a random person you must first find a random person. Luckily for you they are everywhere. The best places to go are parks, coffee shops, places of food, or libraries. Remember that you are going to need to start a conversation with somebody here so find a place where its normal to talk to strangers. </p>
 
               <!--
 This block contains a photo and has a caption.
