--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://live.staticflickr.com/65535/53679506022_88be4ecf48_k.jpg" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://i.imgur.com/MCao5Jn.png" width="100" align="right" height="100" alt="KH_monogram">            
       <h1>Judah Trease's Tips on Interviewing Someone for JOUR 108</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
