--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/65535/49585979228_51bae5b3ee_k.jpg" ></a>
               <p class="caption">A professional interviewer</p>
             </div>
           </li>
@@ -142,7 +142,7 @@ with a paragraph to create a photo with a caption.
               <p>Now its time to put all your preperation to work. Find someone who you think looks interesting and is not busy with something. Go up to them and begin talking to them like normal. Lead the converstaion to asking them if you can interview them for a school project. Remember to stay respectful.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/WDOQBPYEaNs?si=mI0IuG0miMNjPPF-" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
