--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Interview-Someone-for-an-Article" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by Christoph Wenzel <a href="https://flic.kr/p/2ixK75m" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by Christoph Wenzel <a href="https://flic.kr/p/2ixK75m" title="Interview by Christoph Wenzel, on Flickr">Christoph Wenzel from Flickr</a></p>
     </footer>
 
     <!--
